Added new work experience and phone number

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,12 +71,15 @@ const metadata = {
     <Fragment slot="content">
       <h2 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">About me</h2>
       <p>
-        Hey there! I'm 19 and I've spent the last six years getting hands-on with
+        Hey there! I'm Rene and I've spent the last six years getting hands-on with
         servers, networks and cyber security. I'm really into figuring out how things work (and how to keep them safe). I've
         also dabbled in IT management and software development along the way.
       </p>
       <br />
       <p>Feel free to reach out however suits you best!</p>
+      <br>
+      <p>E-Mail: <a class="font-bold" href="mailto:Rene@Karkkainen.net">Rene@Karkkainen.net</a></p>
+      <p>GSM: <a class="font-bold" href="tel:+358453338778">+358 45 333 8778</a></p>
     </Fragment>
 
     <Fragment slot="bg">
@@ -95,6 +98,18 @@ const metadata = {
           'Managing Director<br> <span class="font-normal">Rene Investments Ab, Vantaa, Finland</span> <br/><span class="text-sm font-normal">Dec 2024 - Present | Hobby</span>',
         description: `Managing investments, accounting, and ensuring a slow and steady growth of investments.`,
         icon: 'tabler:currency-dollar',
+      },
+      {
+        title:
+          'Guest Lecturer<br> <span class="font-normal">Helsinki Business College Oy, Helsinki, Finland</span> <br/><span class="text-sm font-normal">Nov - Dec 2025 | Part-time</span>',
+        description: `Teaching a course on computer networks.`,
+        icon: 'tabler:book',
+      },
+      {
+        title:
+          'Account Manager<br> <span class="font-normal">Junction Oy, Espoo, Finland</span> <br/><span class="text-sm font-normal">Oct - Nov 2025 | Volunteering</span>',
+        description: `Made sure the Junction 2025 partner, the Bank of Finland, is enjoying themselves before and during the main event.`,
+        icon: 'tabler:briefcase',
       },
       {
         title:
