--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -199,6 +199,10 @@ const metadata = {
     title="Events"
     items={[
       {
+        title: `Slush 2025 Recycling Team | Volunteer<br /><span class="font-normal">Slush Oy</span><br/><span class="text-sm font-normal">Nov 2024</span><br><a class="text-sm font-normal underline" href="https://slush.org/about/">What is Slush?</a>`,
+        icon: 'tabler:leaf',
+      },
+      {
         title: `AI and Systemic Risk Analytics Conference | Participant</a><br /><span class="font-normal">Bank of Finland, European Systemic Risk Board and RiskLab Finland</span><br/><span class="text-sm font-normal">Jun 2025</span><br><a class="text-sm font-normal underline" href="https://www.suomenpankki.fi/en/news-and-topical/events/calendar/events/conferences-and-workshops/2025/2025-06-27-28-sra/">What is the Systemic Risk Confrence?</a>`,
         icon: 'tabler:building-bank',
       },
