--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ const metadata = {
       <p>Feel free to reach out however suits you best!</p>
       <br>
       <p>E-Mail: <a class="font-bold" href="mailto:Rene@Karkkainen.net">Rene@Karkkainen.net</a></p>
-      <p>GSM: <a class="font-bold" href="tel:+358453338778">+358 45 333 8778</a></p>
+      <p>Tel: <a class="font-bold" href="tel:+358453338778">+358 45 333 8778</a></p>
     </Fragment>
 
     <Fragment slot="bg">
